# FileCryptRuAES

./: Cargo.toml  README.md
src/: crypto.rs  main.rs  uitl.rs
test_files/: random_binary  text.txt
tmp/: a.enc
