[package]
name = "file_crypt_ru"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
cbc = "0.1.2"
hmac = "0.12.1"
sha2 = "0.10.6"
rand = "0.8.5"
argon2 = "0.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
clap = { version = "4.1.8", features = ["derive"] }
rpassword = "7.2.0"